Small fixes to alignments on Assignment Progress page
# The min-width wasn't wide enough to allow double-digit numbers of assignments. We're good now
# up to triple digit totals, but anyone setting 99+ assignments will have to cope with odd behaviour!

--- a/scss/_progress.scss
+++ b/scss/_progress.scss
@@ -160,7 +160,7 @@
         font-size: 18px;
         line-height: 20px;
         vertical-align: top;
-        padding: 8px 12px 8px 36px;
+        padding: 8px 12px 8px 45px;
 
         &:before {
             position: absolute;
@@ -173,7 +173,7 @@
             content: counter(board-count) ". ";
             background-color: $ru_green;
             padding: 8px 6px 0;
-            min-width: 30px;
+            min-width: 35px;
             text-align: right;
         }
     }
